src/styles/commons.scss
@import "./reset.scss";
@import "./_vars";
@import "./mixins.scss";
@import "./font.scss";

html {
  scroll-behavior: smooth;
}
body {
  background: var(--main-bg-color);
  color: var(--black);
  font-family: Inter;
  font-style: normal;
  background-repeat: no-repeat;
  background-position-y: 6rem;
  background-position-x: center;

  transition: all 300ms ease-out;
}

.container {
  max-width: 1240px; /* For large screens */
  margin: auto; /* Center the container in the viewport */
  padding: 0px 1rem;
  @media only screen and (min-width: 1240px) {
    padding: 0rem;
  }
}

.header {
  padding: 3rem 0px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  justify-items: center;
  p {
    font-weight: bold;
  }
  @include breakpoint(mobileonly) {
    padding: 2rem 0px;
    flex-direction: column;
    justify-content: space-around;
  }
}

a {
  text-decoration: none;
  cursor: pointer;

  &.primary {
    padding: 1rem 2rem;
    background: var(--green);
    box-shadow: 0px 34px 30px rgba(48, 161, 20, 0.08);
    border-radius: 40px;
    border: 0px;
    cursor: pointer;
    color: #fff;
    margin-top: 2rem;
    width: fit-content;
    font-weight: bold;
    font-family: Inter;
    font-style: normal;
    font-weight: 600;
    font-size: 14px;
    margin: 1rem;
    display: inline-block;
    &:visited {
      color: #fff;
    }
  }
  &.outline {
    background-color: transparent;
    padding: 1rem 2rem;
    border-radius: 40px;
    border: 1px solid var(--green);
    cursor: pointer;
    font-family: Inter;
    font-style: normal;
    font-weight: 600;
    font-size: 14px;
    margin: 1rem;
    display: inline-block;
    color: var(--green);
    &:visited {
      color: var(--green);
    }
  }
}

.footer {
  background-color: #1e1e1e;
  color: #fff;
  text-align: center;
  padding: 2rem 1rem;
}

.share-buttons {
  button {
    margin: 0.3rem 0.6rem;
    border-radius: 10px;
  }
  button:hover {
    transform: scale(1.1);
  }
}

.thanks {
  .main {
    max-width: 1000px;
    margin: auto;
    text-align: center;
    text-align: center;
    color: #2c322b;

    h1 {
      font-weight: bold;
      padding-bottom: 0rem;
    }
    p {
      font-weight: normal;
      padding-bottom: 2rem;
    }
  }
}

